plugins {
    id 'application'
}

group 'com.reign'
version project.version

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
    maven {url('https://m2.dv8tion.net/releases')}
    maven {url('https://jitpack.io')}
    maven {url("https://maven.lavalink.dev/releases")}
    maven {url("https://maven.lavalink.dev/snapshots")}
}

dependencies {
    testImplementation("junit:junit:4.13.2")

    // JDA
    implementation("net.dv8tion:JDA:6.3.1")

    // Lavaplayer
    implementation("dev.arbjerg:lavaplayer:2.2.7")
    implementation('com.github.Topis-Lavalink-Plugins:Topis-Source-Managers:2.0.7')

    // New Youtube source
    implementation("dev.lavalink.youtube:common:$ytVersion")

    // VOSK
    implementation('net.java.dev.jna:jna:5.12.1')
    implementation('com.alphacephei:vosk:0.3.45')

    // slf4j logging
    implementation('org.slf4j:slf4j-api:2.0.5')
    implementation('ch.qos.logback:logback-classic:1.5.16')

    // Jackson
    implementation('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.2')
    implementation('com.fasterxml.jackson.core:jackson-databind:2.14.2')

    // AsciiTable
    implementation('de.vandermeer:asciitable:0.3.2')

    // Jsoup
    implementation('org.jsoup:jsoup:1.15.4')

    //MongoDB
    implementation('org.mongodb:mongodb-driver-sync:5.3.0')

    // DAVE (Discord's Audio & Video End-to-End Encryption)
    // Interface to use for libraries
    implementation("club.minnced:jdave-api:0.1.7")

    // Compiled natives for libdave for the specified platform
    implementation("club.minnced:jdave-native-linux-x86-64:0.1.7")
    implementation("club.minnced:jdave-native-linux-aarch64:0.1.7")
    implementation("club.minnced:jdave-native-win-x86-64:0.1.7")
    implementation("club.minnced:jdave-native-darwin:0.1.7")
}

tasks.withType(Tar.class).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(Zip.class).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('generateVersion') {
    def outputFile = new File(projectDir, "src/main/resources/version.properties")
    outputs.file outputFile

    doLast {
        def date = new Date().format("yyyy-MM-dd_HH-mm-ss")

        def result = providers.exec {
            commandLine 'git', 'rev-parse', '--verify', '--short', 'HEAD'
        }.standardOutput.asText.get().trim()

        outputFile.text = """
version=$project.version
timestamp=$date
commit=$result
"""
    }
}
processResources.dependsOn(generateVersion)
build.dependsOn(generateVersion)

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes "Main-Class": "com.reign.kat.Main"
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('runMain', JavaExec) {
    dependsOn 'jar'
    classpath = sourceSets.main.runtimeClasspath
}
